# fin-intel-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  README.md  config.py  main.py  pyproject.toml
db/: models.py  vector_store.py
engines/: hk_regulatory.py  hk_rules_data.py  sentiment.py  technical.py
ingestion/: parser.py  sec_edgar.py
mcp_server/: server.py
memory_docs/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PROJECT_MEMORY_GUIDE.md
observability/: langfuse_setup.py
rag/: chunker.py  embedder.py  generator.py  reranker.py  retriever.py
streaming/: sse.py
tests/: test_ingestion.py  test_rag_pipeline.py  test_technical.py
